--- a/.github/workflows/python-pytest_test_simulation.yml
+++ b/.github/workflows/python-pytest_test_simulation.yml
@@ -2,9 +2,9 @@ name: Python PyTest - test_simulation
 
 on:
   push:
-    branches: [ master, devel ]
+    branches: [ main, devel ]
   pull_request:
-    branches: [ master, devel ]
+    branches: [ main, devel ]
 
 jobs:
   build:
