--- a/.github/workflows/python-example.yml
+++ b/.github/workflows/python-example.yml
@@ -2,9 +2,9 @@ name: Python Examples
 
 on:
   push:
-    branches: [ master, devel ]
+    branches: [ main, devel ]
   pull_request:
-    branches: [ master, devel ]
+    branches: [ main, devel ]
 
 jobs:
   build:
