--- a/.github/workflows/python-format.yml
+++ b/.github/workflows/python-format.yml
@@ -2,9 +2,9 @@ name: Python Check Format
 
 on:
   push:
-    branches: [ master, devel ]
+    branches: [ main, devel ]
   pull_request:
-    branches: [ master, devel ]
+    branches: [ main, devel ]
 
 jobs:
   build:
