--- a/.github/workflows/python-pytest_test_dm.yml
+++ b/.github/workflows/python-pytest_test_dm.yml
@@ -10,16 +10,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Login to Docker Hub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
       - name: Pull baseline for HybridQ
         run: |
-          docker pull ${{ secrets.DOCKERHUB_USERNAME }}/hybridq-baseline:latest
-          docker tag ${{ secrets.DOCKERHUB_USERNAME }}/hybridq-baseline:latest hybridq-baseline:latest
+          docker pull smandra/hybridq-baseline:latest
+          docker tag smandra/hybridq-baseline:latest hybridq-baseline:latest
 
       - name: Checkout repository
         uses: actions/checkout@v2
