--- a/Dockerfile_baseline
+++ b/Dockerfile_baseline
@@ -23,7 +23,13 @@ RUN yum -y update && \
 # Get Python version
 ARG PYTHON
 
-# Set default if needed
+# Set default if needed. Available versions
+# cp36-cp36m
+# pp37-pypy37_pp73
+# cp37-cp37m
+# cp38-cp38
+# cp39-cp39
+# cp310-cp310
 ENV PYTHON=${PYTHON:-cp37-cp37m}
 
 # Update PATH
