--- a/.github/workflows/python-example.yml
+++ b/.github/workflows/python-example.yml
@@ -25,17 +25,17 @@ jobs:
       - name: Run example
         run: |
           docker run --rm hybridq -c 'cd /opt/hybridq && \
-            python examples/example.py'
+            $PYTHON examples/example.py'
 
       - name: Run MPI example
         run: |
           docker run --rm hybridq -c 'cd /opt/hybridq && \
-            mpiexec -n 2 --allow-run-as-root python examples/example-mpi.py && \
-            mpiexec -n 2 --allow-run-as-root python examples/example-mpi-trace.py && \
-            mpiexec -n 2 --allow-run-as-root python examples/example-mpi-clifford.py && \
-            DISABLE_MPI_AUTODETECT=1 mpiexec -n 2 --allow-run-as-root python examples/example-mpi.py && \
-            DISABLE_MPI_AUTODETECT=1 mpiexec -n 2 --allow-run-as-root python examples/example-mpi-trace.py && \
-            DISABLE_MPI_AUTODETECT=1 mpiexec -n 2 --allow-run-as-root python examples/example-mpi-clifford.py'
+            mpiexec -n 2 --allow-run-as-root $PYTHON examples/example-mpi.py && \
+            mpiexec -n 2 --allow-run-as-root $PYTHON examples/example-mpi-trace.py && \
+            mpiexec -n 2 --allow-run-as-root $PYTHON examples/example-mpi-clifford.py && \
+            DISABLE_MPI_AUTODETECT=1 mpiexec -n 2 --allow-run-as-root $PYTHON examples/example-mpi.py && \
+            DISABLE_MPI_AUTODETECT=1 mpiexec -n 2 --allow-run-as-root $PYTHON examples/example-mpi-trace.py && \
+            DISABLE_MPI_AUTODETECT=1 mpiexec -n 2 --allow-run-as-root $PYTHON examples/example-mpi-clifford.py'
 
       - name: Run simulator
         run: |
