--- a/.github/workflows/python-pytest_circuit_cp38-cp38.yml
+++ b/.github/workflows/python-pytest_circuit_cp38-cp38.yml
@@ -1,4 +1,4 @@
-name: Python PyTest - circuit
+name: Python (cp38-cp38) PyTest - circuit
 
 on:
   push:
@@ -24,5 +24,5 @@ jobs:
 
       - name: Run tests
         run: |
-          docker run --rm hybridq -c 'pip install pytest-random-order && \
-            pytest -sv --random-order -k 'circuit__' /opt/hybridq/tests/tests.py'
+          docker run --rm hybridq -c '$PYTHON -m pip install pytest-random-order && \
+            $PYTHON -m pytest -sv --random-order -k 'circuit__' /opt/hybridq/tests/tests.py'
