--- a/.github/workflows/python-pytest_dm_2_cp37-cp37m.yml
+++ b/.github/workflows/python-pytest_dm_2_cp37-cp37m.yml
@@ -1,4 +1,4 @@
-name: Python PyTest - dm_2
+name: Python (cp37-cp37m) PyTest - dm_2
 
 on:
   push:
@@ -24,5 +24,5 @@ jobs:
 
       - name: Run tests
         run: |
-          docker run --rm hybridq -c 'pip install pytest-random-order && \
-            pytest -sv --random-order -k 'dm_2__' /opt/hybridq/tests/tests.py'
+          docker run --rm hybridq -c '$PYTHON -m pip install pytest-random-order && \
+            $PYTHON -m pytest -sv --random-order -k 'dm_2__' /opt/hybridq/tests/tests.py'
