--- a/.github/workflows/python-pytest_simulation_3_cp39-cp39.yml
+++ b/.github/workflows/python-pytest_simulation_3_cp39-cp39.yml
@@ -1,4 +1,4 @@
-name: Python PyTest - simulation_3
+name: Python (cp39-cp39) PyTest - simulation_3
 
 on:
   push:
@@ -24,5 +24,5 @@ jobs:
 
       - name: Run tests
         run: |
-          docker run --rm hybridq -c 'pip install pytest-random-order && \
-            pytest -sv --random-order -k 'simulation_3__' /opt/hybridq/tests/tests.py'
+          docker run --rm hybridq -c '$PYTHON -m pip install pytest-random-order && \
+            $PYTHON -m pytest -sv --random-order -k 'simulation_3__' /opt/hybridq/tests/tests.py'
