--- a/.github/workflows/python-pytest_gates_cp38-cp38.yml
+++ b/.github/workflows/python-pytest_gates_cp38-cp38.yml
@@ -10,13 +10,12 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Pull baseline for HybridQ
-        run: |
-          docker pull smandra/hybridq-baseline:cp38-cp38
-          docker tag smandra/hybridq-baseline:cp38-cp38 hybridq-baseline:latest
-
       - name: Checkout repository
         uses: actions/checkout@v2
+
+      - name: Update baseline
+        run: |
+          sed -i 's/hybridq-baseline/hybridq-baseline:cp38-cp38/g' Dockerfile
 
       - name: Build HybridQ container
         run: |
