--- a/.github/workflows/python-format.yml
+++ b/.github/workflows/python-format.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Check format
         run: |
-          docker run --rm hybridq -c '\
+          docker run --rm hybridq bash -c '\
             export PATH=/opt/python/$PYTHON_VERSION/bin/:$PATH && \
             pip install yapf==0.31.0 clang-format==13.0.0 && \
             cd /opt/hybridq && \
