--- a/.github/workflows/pre-release-actions.yml
+++ b/.github/workflows/pre-release-actions.yml
@@ -89,7 +89,8 @@ jobs:
 
       - name: Create package for MacOS
         run: |
-          sed -i '/git+https/d' requirements.txt
+          sed '/git+https/d' requirements.txt > /tmp/requirements.txt
+          mv -f /tmp/requirements.txt requirements.txt
           CXX="clang++ -mmacosx-version-min=10.9" ARCH=core-avx2 pip wheel . -v --no-dependencies -w packages/
           mv packages/hybridq-*-py3-none-any.whl packages/hybridq-$(python setup.py --version)-cp37-cp37m-macosx_10_9_x86_64.whl
 
