--- a/.github/workflows/python-pytest_circuit.yml
+++ b/.github/workflows/python-pytest_circuit.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build HybridQ container
-        env: |
+        env:
           PYTHON_VERSION: ${{ matrix.py }}
         run: |
           docker-compose build --build-arg ARCH=x86-64 \
