--- a/.github/workflows/python-pytest.yml
+++ b/.github/workflows/python-pytest.yml
@@ -1,4 +1,4 @@
-name: PyTest - simulation_3
+name: PyTest - [[:TESTNAME:]]
 
 on:
   push:
@@ -7,11 +7,22 @@ on:
     branches: [ main, devel ]
 
 jobs:
+  collect:
+    runs-on: ubuntu-latest
+    outputs:
+      py: ${{ steps.tests.outputs.names }}
+    steps:
+      - id: tests
+        run: echo "::set-output name=names::[circuit__]"
+
   build:
     runs-on: ubuntu-latest
+    needs: collect
     strategy:
+      fail-fast: false
       matrix:
-        py: [cp37-cp37m, cp38-cp38, cp39-cp39]
+        py: [cp37-cp37m]
+        name: ${{ needs.collect.outputs.names }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -19,6 +30,7 @@ jobs:
       - name: Build HybridQ container
         env:
           PYTHON_VERSION: ${{ matrix.py }}
+          NAME: ${{ matrix.name }}
         run: |
           docker-compose build --build-arg ARCH=x86-64 \
                                --build-arg BASELINE=docker.io/smandra/hybridq-baseline:$PYTHON_VERSION \
@@ -27,4 +39,4 @@ jobs:
       - name: Run tests
         run: |
           docker run --rm hybridq bash -c 'python -m pip install pytest-random-order && \
-            python -m pytest -sv --random-order -k 'simulation_3__' /opt/hybridq/tests/tests.py'
+            python -m pytest -sv --random-order -k ${NAME}__ /opt/hybridq/tests/tests.py'
