--- a/.github/workflows/python-pytest.yml
+++ b/.github/workflows/python-pytest.yml
@@ -10,10 +10,14 @@ jobs:
   collect:
     runs-on: ubuntu-latest
     outputs:
-      py: ${{ steps.tests.outputs.names }}
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
-      - id: tests
-        run: echo "::set-output name=names::[circuit__]"
+    - name: Checkout repository
+      uses: actions/checkout@v2
+    - id: set-matrix
+      run: |
+        NAMES=$(echo [$(cat tests/tests.py | grep ^'def test' | sed -e 's/def test_//g' -e 's/__.*//g' | sort -g | uniq | awk '{print "\""$1"\"" }' | tr '\n' ',' | sed 's/.$//g')])
+        echo "::set-output name=matrix::${NAMES}"
 
   build:
     runs-on: ubuntu-latest
@@ -21,22 +25,23 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        py: [cp37-cp37m]
-        name: ${{ needs.collect.outputs.names }}
+        version: [cp37-cp37, cp38-cp38, cp39-cp39]
+        name: ${{fromJson(needs.collect.outputs.matrix)}}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
 
       - name: Build HybridQ container
         env:
-          PYTHON_VERSION: ${{ matrix.py }}
+          PYTHON_VERSION: ${{ matrix.version }}
           NAME: ${{ matrix.name }}
         run: |
-          docker-compose build --build-arg ARCH=x86-64 \
-                               --build-arg BASELINE=docker.io/smandra/hybridq-baseline:$PYTHON_VERSION \
-                               hybridq
+          echo $PYTHON_VERSION $NAME
+          #docker-compose build --build-arg ARCH=x86-64 \
+          #                     --build-arg BASELINE=docker.io/smandra/hybridq-baseline:$PYTHON_VERSION \
+          #                     hybridq
 
-      - name: Run tests
-        run: |
-          docker run --rm hybridq bash -c 'python -m pip install pytest-random-order && \
-            python -m pytest -sv --random-order -k ${NAME}__ /opt/hybridq/tests/tests.py'
+      #- name: Run tests
+      #  run: |
+      #    docker run --rm hybridq bash -c 'python -m pip install pytest-random-order && \
+      #      python -m pytest -sv --random-order -k ${NAME}__ /opt/hybridq/tests/tests.py'
