--- a/.github/workflows/python-pytest.yml
+++ b/.github/workflows/python-pytest.yml
@@ -23,10 +23,10 @@ jobs:
           PYTHON_VERSION: ${{ matrix.version }}
         run: |
           docker-compose build --build-arg ARCH=x86-64 \
-                               --build-arg SKIP_PRE_CACHING=true \
                                --build-arg BASELINE=docker.io/smandra/hybridq-baseline:$PYTHON_VERSION \
                                hybridq
-          docker save hybridq > /tmp/hybridq_${PYTHON_VERSION}.tar
+          docker tag hybridq:latest hybridq:${PYTHON_VERSION}
+          docker save hybridq:${PYTHON_VERSION} > /tmp/hybridq_${PYTHON_VERSION}.tar
 
       - name: Upload artifact
         uses: actions/upload-artifact@v2
@@ -50,26 +50,30 @@ jobs:
         NAMES=$(echo [$(cat tests/tests.py | grep ^'def test' | sed -e 's/def test_//g' -e 's/__.*//g' | sort -g | uniq | awk '{print "\""$1"\"" }' | tr '\n' ',' | sed 's/.$//g')])
         echo "::set-output name=matrix::${NAMES}"
 
-  #run:
-  #  needs: [build, collect]
-  #  runs-on: ubuntu-latest
-  #  strategy:
-  #    matrix:
-  #      version: [cp37-cp37m, cp38-cp38, cp39-cp39]
-  #      name: ${{fromJson(needs.collect.outputs.matrix)}}
-  #  steps:
-  #    - name: Download artifact
-  #      uses: actions/download-artifact@v2
-  #      with:
-  #        name: hybridq_${{ matrix.version }}
-  #        path: /tmp
-  #    - name: Load docker image
-  #      env:
-  #        NAME: ${{ matrix.name }}
-  #        PYTHON_VERSION: ${{ matrix.version }}
-  #      run: |
-  #        docker load --input /tmp/hybridq_${PYTHON_VERSION}.tar
-  #        docker images -a
+  run:
+    needs: [build, collect]
+
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        version: [cp37-cp37m, cp38-cp38, cp39-cp39]
+        name: ${{fromJson(needs.collect.outputs.matrix)}}
+
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: hybridq_${{ matrix.version }}
+          path: /tmp
+      - name: Load docker image
+        env:
+          NAME: ${{ matrix.name }}
+          PYTHON_VERSION: ${{ matrix.version }}
+        run: |
+          echo $PYTHON_VERSION $NAME
+          docker load --input /tmp/hybridq_${PYTHON_VERSION}.tar
+          docker images -a
 
   #build:
   #  runs-on: ubuntu-latest
